<resources>
    <string name="app_name">Sports Notes</string>
    <string name="title_notes">Заметки</string>
    <string name="title_tasks">Мои достижения</string>
    <string name="title_note">Название</string>
    <string name="task_title">Достижение</string>
    <string name="rename_task">Переимновать задачу</string>
    <string name="add_date_done">Добавить дату выполнения</string>
    <string name="add_note_task">Добавить описание спортивного события</string>
    <string name="task_completed">Задача выполнена</string>
    <string name="name_folder">Имя папки</string>
    <string name="create">Создать</string>
    <string name="add">Добавить</string>
    <string name="add_task">Добавить задачу</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="bin">Корзина</string>
    <string name="search">Поиск</string>
    <string name="generator_passwords">.</string>
    <string name="special_characters">.</string>
    <string name="today">Сегодня</string>

    <string name="clear_bin">Очистить корзину</string>
    <string name="note_text">Текст заметки</string>
    <string name="warning_text">Внимание!</string>
    <string name="conform_delete_folder_tasks">Вы действительно хотите удалить папку и все элементы в ней?</string>
</resources>