<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.viewmodel.ui.tasks.task.EditTaskActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarEditTask"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/delete_menu"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/task_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarEditTask">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/textEditTaskInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:hint="@string/rename_task"
                android:textSize="23sp" />

            <RelativeLayout
                android:id="@+id/calendarTaskView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textEditTaskInput"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/calendarTaskImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_outline_today_24" />

                <TextView
                    android:id="@+id/calendarTaskText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/calendarTaskImage"
                    android:text="@string/add_date_done"
                    android:textSize="15sp"
                    android:textColor="@color/gray"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/informationTaskView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/calendarTaskView"
                android:layout_marginStart="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/informationTaskImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_outline_format_align_left_24"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/informationTaskEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/informationTaskImage"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/add_note_task"
                    android:textSize="15sp"
                    android:background="@null"
                    android:textColor="@color/gray" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/informationTaskView" />


        </RelativeLayout>

    </ScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:background="#FFFFFF"
        android:outlineProvider="bounds"
        android:elevation="40dp">

        <TextView
            android:id="@+id/dateCreateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="Созданно ср, 4 мая" />

        <Button
            android:id="@+id/taskCompleteBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/task_completed"
            android:textAllCaps="false" />

    </RelativeLayout>


</RelativeLayout>